# retail-store-scraper

./: .cursorrules  .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  AGENTS.md  API_EXPORT_MULTI_VALIDATION_FIX.md  CLAUDE.md  DEPLOYMENT-SUMMARY.md  DEPLOYMENT.md  Dockerfile  EMPTY_RETAILERS_EXPORT_FIX.md  ESCAPE_KEY_MODAL_FIX.md  ESCAPE_KEY_VISUAL_FLOW.md  FIX_SUMMARY.md  FRONTEND-REQUIREMENTS.md  GEOJSON_ZERO_COORDINATE_FIX.md  IMPLEMENTATION_IMPROVEMENTS.md  ISSUE_TRIAGE.md  LIVE_LOG_RACE_CONDITION_FIX.md  PAUSE_BUTTON_UI_STATE_FIX.md  PAUSE_LOGIC_FIX.md  PROXY_FUNCTIONS_CHECK_SUMMARY.md  PROXY_MANUAL_TESTING_GUIDE.md  PROXY_QUICK_REFERENCE.md  PROXY_VERIFICATION_COMPLETION.txt  PROXY_VERIFICATION_REPORT.md  PYLINT_IMPROVEMENTS.md  QUICK_FIX_CARD.txt  README.md  RESTART_BUTTON_FIX.md  REVIEW_APPROVER1.md  REVIEW_cc2_code_quality.md  SECURITY_FIX_PATH_TRAVERSAL.md  STALE_PROCESS_FIX.md  UI_STATE_FIX.md  Untitled  (+12 more)
.claude/: settings.local.json
.docs/: API_EXPORT_MULTI_VALIDATION_FIX.md  ATT_DEALER_COR_IMPLEMENTATION.md  COLLISION_STABILITY_FIX.md  EMPTY_RETAILERS_EXPORT_FIX.md  ESCAPE_KEY_MODAL_FIX.md  FIX_SUMMARY.md  GO_LIVE_TEST_PLAN.md  IMPLEMENTATION_IMPROVEMENTS.md  PROXY_FUNCTIONS_CHECK_SUMMARY.md  PROXY_MANUAL_TESTING_GUIDE.md  PROXY_QUICK_REFERENCE.md  PROXY_VERIFICATION_REPORT.md  RENDER_JS_CLI_VALIDATION_FIX.md  RENDER_JS_VALIDATION_FIX.md  SECURITY_FIX_PATH_TRAVERSAL.md  STALE_PROCESS_FIX.md  TEST_LIMIT_VALIDATION_VERIFICATION.md  WALMART_HYBRID_MODE_IMPLEMENTATION.md  XSS_FIX_SUMMARY.md  (+2 more)
(+264 files in other folders)
